--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -10,7 +10,7 @@ From {{etyl|en|nl}} {{compound|oh|my|lang=en|nocat=1}}.
 {{nl-interj}}
 
 # {{label|nl|Brabant}} Exclamation of surprise or disappointment; [[boy]]!
-#:{{ux|nl|'''Amai''', [[wat|wa']][[ene|ne]] [[klap]]!|''[[Jee]]'', what a [[punch]] (or [[thunderstroke]])}}
+#:{{ux|nl|'''Amai''', [[wat|wa']][[ene|ne]] [[klap]]!|''[[jee|Jee]]'', what a [[punch]] (or [[thunderstroke]])}}
 #:{{ux|nl|Wa'ne [[stoot]], '''amai'''!|What a [[blunder]], ''gosh''!}}
 # {{label|nl|Brabant}} [[oh my]], [[amazing]]
 #: {{ux|nl|'''Amai''', da'ziet er goed uit! / '''Amai'''!|''Oh my'', that is looking good! / ''Amazing''!}}
