t+yue:[[松鼠]] ([[WT:EDIT|Assisted]]) <squirrel#37163323>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -54,6 +54,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}
 * Cheyenne: {{t|chy|no'ee'e}}
 * Chinese:
+*: Cantonese: {{t|yue|松鼠|tr=cung4 syu2|sc=Hani}}
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
 * Chuvash: {{t|cv|пакша}}
 * Cornish: {{t|kw|gwiwer|m}}
