/* Noun */ Translations. <epiboly#37180917>

--- a/en/e/epiboly.775580.wikitext
+++ b/en/e/epiboly.775580.wikitext
@@ -18,6 +18,12 @@ From {{etyl|grc|en}} {{m|el|ἐπιβολή||addition}}
 * [[epibolize]]
 * [[epibolization]]
 
+====Translations====
+{{trans-top|the expansion of one cell sheet over other cells, as takes place during gastrulation or secondary intention wound healing}}
+* French: {{t|fr|épibolie|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[et:epiboly]]
 [[ku:epiboly]]
 [[pl:epiboly]]
