--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -11,7 +11,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * {{hyphenation|sim|ple|lang=en}}
 
 ===Adjective===
-{{en-adj|er}}
+{{en-adj|er|more}}
 
 # [[uncomplicated|Uncomplicated]]; taken by itself, with nothing added.
 #* {{RQ:EHough PrqsPrc|I|0088}}
