--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -14,9 +14,9 @@ From {{etyl|enm|en}} {{m|enm|whistlen}}; {{etyl|ang|en}} {{m|ang|hwistlan}}, fro
 ===Noun===
 {{en-noun}}
 
-# A device designed to be placed in the mouth in order, or driven by steam or otherwise, to make a whistling sound.
+# {{senseid|en|device}} A device designed to be placed in the mouth in order, or driven by steam or otherwise, to make a whistling sound.
 # An act of whistling.
-# A shrill, high-pitched sound made by whistling.
+# {{senseid|en|sound}} A shrill, high-pitched sound made by whistling.
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage=We expressed our readiness, and in ten minutes were in the station wagon, rolling rapidly down the long drive, for it was then after nine.{{...}}As we reached the lodge we heard the '''whistle''', and we backed up against one side of the platform as the train pulled up at the other.}}
