--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -20,6 +20,13 @@ The verb comes from the supposed cunningness of the weasel.
 # Any of the [[carnivorous]] [[mammal]]s of the genus ''[[Mustela]]'', having a slender body, a long tail and usually a light brown upper coat and light-coloured belly.
 # The taxonomic family [[Mustelidae]] is also called the '''weasel''' family.
 # A [[devious]] or [[sneaky]] person or animal.
+#* {{quote-news|date=February 8, 2016
+|author=Marwan Bishara
+|title=Why Obama fails the leadership test in the Middle East
+|work=Al Jazeera English
+|url=http://www.aljazeera.com/indepth/opinion/2016/02/obama-fails-leadership-test-middle-east-160208111035946.html
+|page=
+|passage=Once you've gone beyond the scripted speeches, soundbites and cliches, you'll notice how the debate about leadership is primarily divided between the three governors and two senators, the other two weasels, Donald Trump and Ben Carson notwithstanding.}}
 # A type of yarn winder used for counting the yardage of handspun yarn. It most commonly has a wooden peg or dowel that pops up from the gearing mechanism after a certain number of yards have been wound onto the winder.
 
 ====Hypernyms====
