--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -20,11 +20,12 @@
 * French: {{t+|fr|Monseigneur}}
 * German: {{t+|de|Monsignore|m}}
 * Italian: {{t+|it|monsignore|m}}
-{{trans-mid}}
 * Polish: {{t+|pl|prałat|m}}
+{{trans-mid}}
 * Portuguese: {{t|pt|monsenhor|m}}
 * Russian: {{t|ru|монсеньо́р|m}}
 * Spanish: {{t+|es|monseñor|m}}
+* Tagalog: {{t|tl|monsenyor}}
 {{trans-bottom}}
 
 [[io:Monsignor]]
