--- a/en/o/outraging.801657.wikitext
+++ b/en/o/outraging.801657.wikitext
@@ -5,6 +5,13 @@
 
 # {{present participle of|outrage|lang=en|nocat=1}}
 
+===Noun===
+{{en-noun}}
+
+# {{lb|en|archaic}} The committing of an [[outrage]].
+#* Rev. Thomas Smith
+#*: Many were the '''outragings''' and insultings of the Indians upon the English while Sir Edmund Andros was Governor.
+
 [[de:outraging]]
 [[fr:outraging]]
 [[ja:outraging]]
