--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -71,7 +71,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 {{rel-top|terms derived from the noun "pig"}}
 * [[blind pig]]
 * [[bush pig]]
-* [[dish pig]] You are such a goat
+* [[dish pig]]
 * [[eat like a pig]]
 * [[flying pig]]
 * [[guinea pig]]
