t+ro:[[doamnă]] ([[WT:EDIT|Assisted]]) <dame#37230600>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -41,6 +41,7 @@
 {{trans-top|equivalent title to Sir for a female knight}}
 * Maori: {{t|mi|kahurangi}}
 * Portuguese: {{t+|pt|dama|f}}
+* Romanian: {{t+|ro|doamnă|f}}
 * Russian: {{t+|ru|ле́ди|f}}, {{t|ru|дейм|f|tr=dɛjm}}, {{t+|ru|да́ма|f}}
 {{trans-mid}}
 * Serbo-Croatian: {{t+|sh|dama}}
