--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm|en}} {{m|enm|whistlen}}; {{etyl|ang|en}} {{m|ang|hwistlan}}, fro
 * Bulgarian: {{t+|bg|свирка|f|sc=Cyrl}}
 * Catalan: {{t+|ca|xiulet|m}}
 * Chinese:
+*: Cantonese: {{t|yue|哨子|tr=saau3 zi2|sc=Hani}}, {{t|yue|雞|tr=gai1|sc=Hani}}
 *: Mandarin: {{t+|cmn|哨子|tr=shàozi|sc=Hani}}, {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}, {{t+|cmn|汽笛|tr=qìdí|sc=Hani}} {{qualifier|steam whistle}}
 * Czech: {{t+|cs|píšťala|f}}, {{t|cs|píšťalka|f}}
 * Danish: {{t+|da|fløjte|c}}
@@ -73,8 +74,8 @@ From {{etyl|enm|en}} {{m|enm|whistlen}}; {{etyl|ang|en}} {{m|ang|hwistlan}}, fro
 * Indonesian: {{t+|id|peluit}}
 * Irish: {{t+|ga|feadóg|f}}
 * Italian: {{t+|it|fischietto|m}}
-* Japanese: {{t+|ja|笛|tr=ふえ, fue}}, {{t|ja|ホイッスル|tr=hoissuru}}, {{t|ja|口笛|tr=くちぶえ, kuchibue}}, {{t|ja|汽笛|tr=きてき|sc=Jpan}} {{qualifier|steam whistle}}
 {{trans-mid}}
+* Japanese: {{t+|ja|笛|tr=ふえ, fue}}, {{t|ja|ホイッスル|tr=hoissuru}}, {{t|ja|口笛|tr=くちぶえ, kuchibue}}, {{t|ja|汽笛|tr=きてき|sc=Jpan}} {{qualifier|steam whistle}}
 * Khmer: {{t+|km|កញ្ចែ|tr=kanh jeh|sc=Khmr}}
 * Korean: {{t+|ko|호각|sc=Kore}}
 * Latgalian: {{t|ltg|šviļpuks}}, {{t|ltg|šviļpaunīks}}, {{t|ltg|sveļpe}}
