--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -40,7 +40,7 @@
 * Finnish: {{t+|fi|fretti}}
 * French: {{t+|fr|furet|m}}
 * Friulian: {{t|fur|pudîs blanc}}
-* Galician: {{t+|gl|furón}}
+* Galician: {{t+|gl|furón}}, {{t+|gl|tourón}}
 * German: {{t+|de|Frettchen|n}}
 * Greek: {{t+|el|κουνάβι|n}}, {{t+|el|νυφίτσα|f}}
 * Hebrew: {{t|he|חָמוֹס|m|tr=khamós|sc=Hebr}}
