--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -11,7 +11,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 ===Noun===
 {{en-noun}}
 
-# A [[weasel]]-like animal of the genus ''[[Mustela]]'', notably the {{vern|European polecat}}, ''[[Mustela putorius]]''.
+# A [[weasel]]-like animal of the genus ''[[Mustela]]'', notably the [[European polecat]], ''[[Mustela putorius]]''.
 # {{label|en|US|dialect}} A [[skunk]].
 
 ====Quotations====
