--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -65,6 +65,7 @@ From {{etyl|nl|en}} {{m|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{
 * Kyrgyz: {{t+|ky|бамбук|m|sc=Cyrl}}
 * Lao: {{t|lo|ໄມ້ໄຜ່|sc=Laoo}}
 * Latin: {{t|la|harundō Indica|f}}
+* Lü: {{t|khb|ᧄᦺᧉᦌᦱᧂ|sc=Talu}}
 * Macedonian: {{t|mk|бамбус|m}}
 * Malay: {{t|ms|pering}}
 *: Rumi: {{t+|ms|buluh}}, {{t+|ms|bambu}}, {{t|ms|aur}}
