--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɪn|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|ang|ċinn||chin}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kinnuz||chin}} (compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, Danish {{m|da|kind}}, Icelandic {{m|is|kinn}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵenHw-}}, {{m|ine-pro|*ǵnā(w)-||jaw}} (compare Welsh {{m|cy|gen}}, Latin {{m|la|gena}}, Tocharian A {{m|xto|śanwem}}, Ancient Greek {{m|grc|sc=polytonic|γένυς}} 'jaw', Armenian {{m|hy|ծնոտ|sc=Armn}}, Persian {{m|fa|چانه|tr=čâne|sc=fa-Arab}}, Sanskrit {{m|sa|हनु|tr=hánu|sc=Deva}}).
+From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|ang|ċinn||chin}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kinnuz||chin}} (compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, Danish {{m|da|kind}}, Icelandic {{m|is|kinn}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵenHw-}}, {{m|ine-pro|*ǵnā(w)-||jaw}}. Compare Welsh {{m|cy|gen}}, Latin {{m|la|gena}}, Tocharian A {{m|xto|śanwem}}, Ancient Greek {{m|grc|sc=polytonic|γένυς}} 'jaw', Armenian {{m|hy|ծնոտ|sc=Armn}}, Persian {{m|fa|چانه|tr=čâne|sc=fa-Arab}}, Sanskrit {{m|sa|हनु|tr=hánu|sc=Deva}}.
 
 ====Noun====
 {{en-noun}}
