--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -14,6 +14,8 @@ From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|a
 {{en-noun}}
 
 # The bottom of a [[face]], especially, the lower [[jaw]] or the region below the [[mouth]].
+#* '''1876''', "[[:s:Encyclopædia Britannica, Ninth Edition/C|C]]" in the [[:s:Encyclopædia Britannica, Ninth Edition|''Encyclopædia Britannica'', 9th ed.]], [[:s:Encyclopædia Britannica, Ninth Edition/Volume IV|Vol. IV]], [[:s:Encyclopædia Britannica, Ninth Edition/C|p. 616]]:
+#*: Our English ''ch'' (pronounced ''tch'') for original ''c'' (as in '''''chin''''' for Old English ''cin'', ''child'' for ''cild'') is due probably to Norman influence, but here, as often, it is difficult to differentiate the results of the many disturbing causes which have operated upon our language.
 # {{label|en|slang|US}} talk.
 # {{label|en|slang|British}} A falsehood.
 # {{label|en|boxing|uncountable}} The ability to withstand being punched in the face without being [[knock out|knocked out]].
