--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -24,7 +24,7 @@ From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|a
 * [[mentum]]
 
 =====Antonyms=====
-* {{sense|boxing}} [[glass jaw]]
+* {{sense|boxing}} ''See'' '''[[glass jaw]]'''
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''chin''}}
