--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -21,7 +21,7 @@ From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|a
 # {{label|en|boxing|uncountable}} The [[ability]] to [[withstand]] being [[punch]]ed in the [[#chin|chin]] without being [[knock out|knocked out]].
 
 =====Synonyms=====
-* {{sense|central area of the jaw, below the mouth}} [[mentum]] {{context|anatomy}}
+* {{sense|central area of the jaw, below the mouth}} [[mentum]] {{qualifier|anatomy}}
 
 =====Antonyms=====
 * {{sense|boxing}} ''See'' '''[[glass jaw]]'''
