--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -187,7 +187,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Spanish: {{t+|es|conejo|m}}
 * Swahili: {{t+|sw|sungura}}
 * Swedish: {{t+|sv|kanin|c}}
-* Tagalog: {{t+|tl|kuneho}}
+* Tagalog: {{t+|tl|buot}}, {{t+|tl|kuneho}}
 * Tajik: {{t+|tg|харгӯш|sc=Cyrl}}
 * Tamil: {{t+|ta|முயல்|sc=Taml}}
 * Taos: {{t|twf|pȉwéna}}
