--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -178,7 +178,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Malagasy: {{t+|mg|nosy}}
 * Malay: {{t|ms|pulau}}, {{t|ms|nusa}}
 * Malayalam: {{t+|ml|ദ്വീപ്}}
-* Maltese: {{t+|mt|gżira|f}}
+* Maltese: {{t+|mt|gżira|f}}, {{t+|mt|ġzira|f}} 
 * Manx: {{t|gv|ellan|m|f}}, {{t|gv|innis|f}}, {{t|gv|innys|f}}, {{t|gv|insh|f}}
 * Maori: {{t|mi|motu}}
 * Mapudungun: {{t|arn|wapi}}
