--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -4,7 +4,7 @@
 {{borrowing|fr|quadrupède|lang=en}}, from {{etyl|frm|en}}, from {{etyl|la|en}} stem of {{m|la|quadrupēs||four-footed, a four-footed animal}}, from {{m|la|quadri-||four-}} + stem of {{m|la|pes||foot}}. Alternatively analyzable as {{confix|quadri|alt1=quadru|ped|lang=en}}.
 
 ===Pronunciation===
-* {{IPA|/ˈkwadɹupɛd/|lang=en}}
+* {{IPA|/ˈkwɒdɹupɛd/|lang=en}}
 
 ===Noun===
 {{en-noun}}
