--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -49,7 +49,7 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 * Hungarian: {{t+|hu|beállítás}}
 * Interlingua: {{t|ia|adjustamento}}
 {{trans-mid}}
-* Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}
+* Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}, {{t|ga|inleadh|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: {{t+|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
 * Korean: {{t-needed|ko}}
