--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -72,7 +72,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Teilung|f}}
 * Greek: {{t+|el|διαίρεση|f}}
-* Hebrew: {{t|he|חלוקה|f|tr=khaluqa|sc=Hebr}}
+* Hebrew: {{t|he|חלוקה|f|tr=ḥaluqá|sc=Hebr}}
 * Indonesian: {{t+|id|divisi}}
 * Irish: {{t|ga|deighilt|f}}
 * Italian: {{t+|it|divisione|f}}
@@ -137,7 +137,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Division|f}}
 * Greek: {{t+|el|διαίρεση|f}}
-* Hebrew: {{t|he|חילוק|m|tr=khiluq|sc=Hebr}}
+* Hebrew: {{t|he|חילוק|m|tr=ḥilúq|sc=Hebr}}
 * Icelandic: {{t+|is|deiling|f}}
 * Italian: {{t+|it|divisione|f}}
 * Japanese: {{t|ja|割り算|tr=わりざん, warizan|sc=Jpan}}, {{t|ja|除算|tr=じょざん, jozan|sc=Jpan}}
@@ -204,7 +204,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
 * Greek: {{t+|el|μεραρχία|f}}
-* Hebrew: {{t|he|אוגדה|f|tr=ugda|sc=Hebr}}
+* Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
 * Indonesian: {{t+|id|divisi}}
 * Khmer: {{t|km|កងពលធំ|tr=kong pol thom|sc=Khmr}}
 * Korean: {{t+|ko|사단|sc=Kore}}
