--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -145,6 +145,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 {{trans-mid}}
 * Malay: {{t|ms|kakitangan}}
 * Norwegian: {{t|no|personale}}
+*: Bokmål: {{t|nb|ansatte}}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
 * Polish: {{t+|pl|personel|m}}, {{t|pl|pracownicy|p}}
 * Portuguese: {{t+|pt|pessoal|m}}
