t+id:[[tahanan perang]] ([[WT:EDIT|Assisted]]) <prisoner of war#37394355>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -19,6 +19,7 @@
 * German: {{t+|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου}}
 * Icelandic: {{t|is|stríðsfangi|m}}
+* Indonesian: {{t|id|tahanan perang}}
 * Interlingua: {{t|ia|prisionero de guerra}}
 * Italian: {{t|it|prigioniero di guerra|m}}
 * Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
