--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -76,8 +76,8 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Cherokee: {{t|chr|ᏥᏍᏚ|tr=tsisdu}}
 * Chickasaw: {{t|cic|chokfi}}
 * Chinese:
-*: Cantonese: {{t|yue|兔仔|tr=tou3 jai2|sc=Hani}}, {{t|yue|白兔|tr=baak6 tou3|sc=Hani}} {{qualifier|white rabbit}}
-*: Mandarin: {{t+|cmn|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t+|cmn|白兔|tr=báitù|sc=Hani}}
+*: Cantonese: {{t|yue|兔仔|tr=tou3 zai2|sc=Hani}}, {{t|yue|白兔|tr=baak6 tou3|sc=Hani}} {{qualifier|white rabbit}}
+*: Mandarin: {{t+|cmn|兔子|tr=tùzi|sc=Hani}}, {{t+|cmn|白兔|tr=báitù|sc=Hani}} {{qualifier|white rabbit}}
 * Classical Nahuatl: {{t|nci|tōchtli}}
 * Comanche: {{t|com|tabu}}
 * Cornish: {{t|kw|konin|m}}
