--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -47,10 +47,10 @@ The verb comes from the supposed cunningness of the weasel.
 {{trans-top|least weasel, ''Mustela nivalis''}}
 * Algonquin: {{t|alq|cigosi}}
 * Arabic: {{t|ar|اِبْن عِرْس|m}}
-*: Moroccan Arabic: {{t|ary|فارة الخيل|f|tr=farat el-khil}} {{qualifier|litt. horse-mouse}}
+*: Moroccan Arabic: {{t|ary|فارة الخيل|f|tr=farat el-khil}} {{qualifier|lit. horse-mouse}}
 * Armenian: {{t|hy|աքիս}}
 * Basque: {{t+|eu|erbinude}}
-* Belarusian: {{t|be|ласка|f|tr=láska|sc=Cyrl}}
+* Belarusian: {{t|be|ла́ска|f}}
 * Breton: {{t+|br|kaerell}}
 * Chinese:
 *: Mandarin: {{t+|cmn|黃鼠狼|sc=Hani}}, {{t+|cmn|黄鼠狼|tr=huángshǔláng|sc=Hani}}
@@ -66,7 +66,7 @@ The verb comes from the supposed cunningness of the weasel.
 * German: {{t+|de|Wiesel|n}}, {{t|de|Mauswiesel|n}}, {{t|de|Zwergwiesel|n}}, {{t|de|Kleinwiesel|n}}, {{qualifier|popularly}} {{t|de|Hermännchen|n}}
 * Greek: {{t+|el|νυφίτσα|f}}
 *: Ancient: {{t|grc|γαλῆ|f}}
-* Hebrew: {{t+|he|סמור|sc=Hebr|tr=samur}}
+* Hebrew: {{t+|he|סמור|tr=samur}}
 * Hungarian: {{t+|hu|menyét}}
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
@@ -77,7 +77,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Latvian: {{t|lv|zebiekste|f}}
 * Lithuanian: {{t|lt|žebenkštis|m}}
 * Luxembourgish: {{t|lb|Wisel|n}}
-* Macedonian: {{t|mk|ласица|f|tr=lásica}}
+* Macedonian: {{t|mk|ла́сица|f}}
 * Malay: {{t|ms|wesel}}
 * Mazanderani: {{t|mzn|لسک|tr=lesk|sc=fa-Arab}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
@@ -89,7 +89,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Scots: {{t|sco|whitrat}}
 * Scottish Gaelic: {{t|gd|neas|f}}, {{t|gd|neas bheag|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|ласица|f}}
+*: Cyrillic: {{t|sh|ласица|f|sc=Cyrl}}
 *: Roman: {{t|sh|lasica|f}}
 * Slovene: {{t+|sl|podlasica|f}}
 * Sorbian:
@@ -98,7 +98,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Spanish: {{t+|es|comadreja|f}}, {{t|es|mustela|f}}, {{t|es|turón|m}}
 * Tagalog: {{t|tl|mustela}}
 * Turkish: {{t+|tr|gelincik}}
-* Ukrainian: {{t|uk|ласка|f|tr=láska|sc=Cyrl}}
+* Ukrainian: {{t|uk|ла́ска|f}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
 * Walloon: {{t+|wa|marcote|f}}, {{t+|wa|bascolete|f}}
 * West Frisian: {{t|fy|wezeling|c}}
@@ -132,8 +132,8 @@ The verb comes from the supposed cunningness of the weasel.
 {{checktrans-top}}
 * Albanian: {{t-check|sq|nuse e lalës}}
 * Basque: {{t+check|eu|erbinude}}
-* Belarusian: {{t-check|be|ласка|sc=Cyrl}}
-* Bulgarian: {{t+check|bg|невестулка|tr=[[nevestulka]]|sc=Cyrl}}
+* Belarusian: {{t-check|be|ласка}}
+* Bulgarian: {{t+check|bg|невестулка|tr=[[nevestulka]]}}
 * Catalan: {{t-check|ca|mostela|f}}
 * Friulian: {{t-check|fur|bilite}}
 * Galician: {{t+check|gl|donicela}}, {{t-check|gl|denociña}}
@@ -148,13 +148,14 @@ The verb comes from the supposed cunningness of the weasel.
 {{checktrans-mid}}
 * Romanian: {{t+check|ro|nevăstuică|f}}
 * Romani: {{t-check|rom|boriori|f}}
+* Romansch: {{t-check|rm|mustaila|f}}
 * Sardinian: {{t-check|sc|bucca de mele}}, {{t-check|sc|bucchemeli}}
-* Serbo-Croatian: {{t-check|sh|ласица}}, {{t-check|sh|lasica}}
+* Serbo-Croatian: {{t-check|sh|ласица|sc=Cyrl}}, {{t-check|sh|lasica}}
 * Slovak: {{t-check|sk|lasica}}
 * Slovene: {{t+check|sl|podlasica|f}}
 * Spanish: {{t+check|es|comadreja|f}}, {{t-check|es|mostela|f}}
 * Swedish: {{t+check|sv|vessla}}
-* Ukrainian: {{t-check|uk|ласиця|tr=[[lasicja]]|sc=Cyrl}}
+* Ukrainian: {{t-check|uk|ласиця|tr=[[lasicja]]}}
 * Welsh: {{t-check|cy|bronwen}}, {{t-check|cy|gwenci}}
 * Vilamovian: {{t-check|wym|gyfaotela}}
 {{checktrans-bottom}}
