--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -52,7 +52,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{m|la|Armenius|
 * Greek: {{t+|el|ερμίνα|f}}
 * Hungarian: {{t+|hu|hermelin}}
 * Icelandic: {{t+|is|hreysiköttur}}
-* Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}
+* Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}, {{t|ga|bláthnaid|f}} {{qualifier|female}}
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo|sc=Jpan}}
 * Norman: {{t|nrf|b'lette|f}}
