/* Norwegian Bokmål */ derived terms <dame#37410044>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -185,6 +185,9 @@ From {{etyl|la|nb}} {{m|la|domina}}, via {{etyl|fro|nb}} {{m|fro|dame}} and late
 # a {{l|en|lady}}, {{l|en|woman}}
 # (''card games'') a {{l|en|queen}}
 
+====Derived terms====
+* {{l|nb|dameundertøy}}
+
 ===References===
 * {{R:The Bokmål Dictionary}}
 
