--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -1,6 +1,9 @@
 {{also|monsignor}}
 ==English==
 
+===Etymology===
+From {{etyl|it|en}} {{term|monsignore|lang=it}}, from {{etyl|fr|en}} {{term|monseigneur|lang=fr}}.
+
 ===Pronunciation===
 * {{a|UK}} {{IPA|/mɒnˈsiː.njə/|/mɒn.siːˈnjɔː/|lang=en}}
 * {{a|US}} {{IPA|/mɑnˈsiː.njɚ/|lang=en}}
