t+sv:[[iller]] ([[WT:EDIT|Assisted]]) <ferret#37418979>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -78,7 +78,7 @@
 * Slovene: {{t+|sl|dihur|m}}
 * Spanish: {{t+|es|hurón|m}}
 * Swahili: {{t|sw|fereti}}
-* Swedish: {{t|sv|tamiller}}
+* Swedish: {{t|sv|tamiller}}, {{t+|sv|iller|c}}
 * Tajik: {{t+|tg|хаз|sc=Cyrl}}
 * Tamil: {{t|ta|மரநாய் வகை|sc=Taml}}
 * Turkish: {{t+|tr|yaban}}, {{t|tr|dağ gelinciği}}
