--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -162,6 +162,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 {{trans-top|to stoop}}
 * Finnish: {{t+|fi|kumartua}}
 {{trans-mid}}
+* French: {{t+|fr|se baisser}}
 {{trans-bottom}}
 
 {{trans-top|to bow in prayer, or in token of submission}}
