--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -174,6 +174,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Bulgarian: {{t+|bg|подчинявам}}
 * Dutch: {{t+|nl|onderwerpen}}
 * Finnish: {{t+|fi|taivuttaa}}
+* French: {{t+|fr|soumettre}}
 * Portuguese: {{t+|pt|obrigar}}
 * Spanish: {{t+|es|doblegar}}
 {{trans-mid}}
@@ -186,6 +187,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 {{trans-top|to submit}}
 * Finnish: {{t+|fi|antaa periksi}}
 {{trans-mid}}
+* French: {{t+|fr|soumettre}}
 {{trans-bottom}}
 
 {{trans-top|to apply to a task or purpose}}
