--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -286,6 +286,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Czech: {{t+|cs|ohyb}}
 * Dutch: {{t+|nl|bocht|m}}
 * Finnish: {{t+|fi|mutka}}
+* French: {{t+|fr|virage|m}}
 * German: {{t+|de|Kurve|f}}
 * Greek: {{t+|el|στροφή|f}}
 * Italian: {{t+|it|curva|f}}
