t+it:[[vorticale]] ([[WT:EDIT|Assisted]]) <vortical#37431021>

--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -36,7 +36,7 @@ From (the stem of) {{etyl|la|en}} {{m|la|vortex}} {{suffix||al|lang=en}}.
 * German: {{t+|de|kreisend}}, {{t|de|wirbelartig}}, {{t|de|wirbelnd}}
 {{trans-mid}}
 * Hindi: {{t-needed|hi}}
-* Italian: {{t+|it|vorticoso}}
+* Italian: {{t+|it|vorticoso}}, {{t|it|vorticale}}
 * Japanese: {{t-needed|ja}}
 * Korean: {{t-needed|ko}}
 * Polish: {{t|pl|wirowy|m}}
