--- a/en/n/nonassignable.776144.wikitext
+++ b/en/n/nonassignable.776144.wikitext
@@ -4,9 +4,9 @@
 {{en-adj|-}}
 
 # That cannot be [[assign]]ed to another.
-#: ''an '''unassignable''' annuity''
+#: ''a '''nonassignable''' annuity''
 # {{lb|en|computing|programming}} That cannot be [[assigned]] to.
-#: ''Constants, unlike variables, are '''unassignable'''.''
+#: ''Constants, unlike variables, are '''nonassignable'''.''
 
 ====Translations====
 {{trans-top|that cannot be assigned to another}}
