t+es:[[1 Samuel]] ([[WT:EDIT|Assisted]]) <1 Samuel#37432319>

--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -22,6 +22,7 @@
 * Greek: {{t|el|Α' Σαμουήλ}}
 * Irish: {{t|ga|Céad Leabhar Shamúéil|m}}, {{t|ga|1 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記上|tr=samueru kijō}}
+* Spanish: {{t|es|1 Samuel|m}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 1]]
