t+es:[[2 Samuel]] ([[WT:EDIT|Assisted]]) <2 Samuel#37432323>

--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -24,6 +24,7 @@
 * Irish: {{t|ga|Dara Leabhar Shamúéil|m}}, {{t|ga|2 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記下|tr=samueru kige|sc=Jpan}}
 * Ngazidja Comorian: {{t|zdj|2 Samweli}}
+* Spanish: {{t|es|2 Samuel|m}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 2]]
