t+es:[[2 Reyes]] ([[WT:EDIT|Assisted]]) <2 Kings#37432340>

--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -19,6 +19,7 @@
 * Greek: {{t|el|Β' Βασιλειών}}, {{t|el|Βασιλείς Β'}}
 * Irish: {{t|ga|Dara Leabhar na Ríthe|m}}, {{t|ga|2 Ríthe|m}}
 * Japanese: {{t|ja|列王記下|tr=retsuō kige|sc=Jpan}}
+* Spanish: {{t|es|2 Reyes|m-p}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 2]]
