--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -37,6 +37,9 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 ===Etymology===
 From the {{etyl|grc|la}} {{m|grc|Ἰωνία}}.
 
+===Alternative forms===
+* {{l|la|Jonia}}
+
 ===Pronunciation===
 * {{la-IPA|i.ōnia}}
 
