--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -18,6 +18,7 @@ From {{etyl|grc|en}} {{m|grc|Ἰωνία}}.
 ====Translations====
 {{trans-top|(historical) Ancient Greek settlement}}
 * French: {{t+|fr|Ionie|f}}
+* Germam: {{t|de|Jonien}}, {{t|de|Ionien}}
 * Greek:
 *: Ancient: {{t|grc|Ἰωνία|f|sc=polytonic}}
 {{trans-mid}}
