--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -45,6 +45,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Bulgarian: {{t+|bg|гни́я|impf|sc=Cyrl}}
 * Catalan: {{t+|ca|podrir}}
 * Chinese:
+*: Cantonese: {{t|yue|爛|sc=Hani}}, {{t|yue|烂|tr=laan6|sc=Hani}}
 *: Mandarin: {{t+|cmn|腐化|tr=fǔhuà|sc=Hani}}, {{t+|cmn|腐壞|sc=Hani}}, {{t+|cmn|腐坏|tr=fǔhuài|sc=Hani}}, {{t+|cmn|腐爛|sc=Hani}}, {{t+|cmn|腐烂|tr=fǔlàn|sc=Hani}}
 * Cornish: {{t|kw|pedri}}, {{t|kw|breyna}}
 * Czech: {{t|cs|hnít|impf}}
