--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -73,6 +73,7 @@ From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|a
 * Central Melanau: {{t|mel|gaam}}
 * Chamorro: {{t|ch|åchai}}
 * Chinese:
+*: Cantonese: {{t|yue|下扒|tr=haa6 paa4|sc=Hani}}
 *: Mandarin: {{t+|cmn|下巴|tr=xiàba|sc=Hani}}, {{t+|cmn|頷|sc=Hani}}, {{t+|cmn|颔|tr=hàn|sc=Hani}}, {{t|cmn|下巴頦|sc=Hani}}, {{t+|cmn|下巴颏|tr=xiàbakē|sc=Hani}}
 * Chuvash: {{t|cv|янах|sc=Cyrl}}
 * Coptic: {{t|cop|ⲙⲟⲣⲧ|f|tr=mord, mort}}
