--- a/en/t/thermalization.855949.wikitext
+++ b/en/t/thermalization.855949.wikitext
@@ -11,6 +11,7 @@
 
 ====Translations====
 {{trans-top|The process of reaching thermal equilibrium}}
-* Italian: {{t|it|termalizzazione|f}}
+* German: {{t|de|Thermalisierung|f}}
 {{trans-mid}}
+* Italian: {{t|it|termalizzazione|f}}
 {{trans-bottom}}
