t+ka:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <weight#37449124>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -95,6 +95,7 @@ From {{etyl|ang|en}} {{m|ang|wiht}}, {{m|ang|ġewiht}}, from {{etyl|gem-pro|en}}
 * French: {{t+|fr|poids}}
 * Friulian: {{t|fur|pês|m}}
 * Galician: {{t+|gl|peso|m}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n}}
 * Hawaiian: {{t|haw|kaumaha}}
@@ -111,8 +112,8 @@ From {{etyl|ang|en}} {{m|ang|wiht}}, {{m|ang|ġewiht}}, from {{etyl|gem-pro|en}}
 * Khmer: {{t-needed|km}}
 * Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}}), {{t+|ko|무게|sc=Kore}}, {{t+|ko|체중|sc=Kore}} {{qualifier|body weight}}
 * Kyrgyz: {{t+|ky|салмак|sc=Cyrl}}
-* Ladin: {{t|lld|peis|m}}
 {{trans-mid}}
+* Ladin: {{t|lld|peis|m}}
 * Lao: {{t|lo|ນ້ຳໜັກ|sc=Laoo}}
 * Latvian: {{t+|lv|svars|m}}
 * Lithuanian: {{t+|lt|svoris|m}}
