--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -120,7 +120,7 @@ From {{etyl|ang|en}} {{m|ang|wiht}}, {{m|ang|ġewiht}}, from {{etyl|gem-pro|en}}
 * Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
 * Malay: {{t|ms|berat}}
 * Maori: {{t-needed|mi}}
-* Mongolian: {{t+|mn|жин|sc=Lana}}, {{t+|mn|дэнс|sc=Cyrl}}
+* Mongolian: {{t+|mn|жин}}, {{t+|mn|дэнс}}
 * Norwegian:
 *: Bokmål: {{t+|nb|vekt|m|f}}
 * Occitan: {{t+|oc|pes|m}}
