--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -30,6 +30,7 @@
 * Polish: {{t+|pl|czworonóg|m-an}}
 * Portuguese: {{t+|pt|quadrúpede|m}}
 * Russian: {{t+|ru|четвероногий|n|alt=четвероно́гое}} {{qualifier|живо́тное}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
+* Sanskrit: {{t|sa|चतुष्पद्|m|n|sc=Deva}}
 * Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
 * Swedish: {{t|sv|fyrfotadjur|n}}, {{t|sv|tetrapod|c}}, {{t|sv|fyrfoting|c}}
 * Tagalog: {{t|tl|hayop na aapating-paa}}
