t+th:[[พัด]] t-balance ([[WT:EDIT|Assisted]]) <blow#37458863>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -165,8 +165,8 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Kurdish:
 *: Sorani: {{t|ckb|فو|sc=ku-Arab}}
 * Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t|ky|айдап кийирүү}}, {{t|ky|жел чыгаруу}}, {{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|pyust}}
+{{trans-mid}}
 * Latin: {{t|la|flo}}, {{t|la|sufflo}}
 * Latvian: {{t+|lv|pūst}}
 * Lithuanian: {{t+|lt|pūsti}}
@@ -195,6 +195,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Spanish: {{t+|es|soplar}}
 * Sundanese: {{t|su|tiup}}
 * Swedish: {{t+|sv|blåsa}}
+* Thai: {{t+|th|พัด|sc=Thai}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
 * Ukrainian: {{t|uk|ду́ти|sc=Cyrl}}, {{t|uk|ві́яти|sc=Cyrl}}
 * Venetian: {{t|vec|supiar}}, {{t|vec|sufiar}}
