--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -79,7 +79,7 @@ Abbreviation of various terms and phrases.
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
 * Swedish: {{t+|sv|CD|c}}
-* Thai: {{t|th|ซิดี|tr=sí dee}}
+* Thai: {{t|th|ซีดี|tr=see dee}}
 * Urdu: {{t|ur|سی ڈی|tr=sīḍī|sc=ur-Arab}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
