t+tl:[[kwak-kwak]] t-balance ([[WT:EDIT|Assisted]]) <quack#37460041>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm|en}} *{{m|enm||quacken}}, {{m|enm|queken||to croak like a frog; 
 * Russian: {{t|ru|кря-кря}}, {{t+|ru|кря́канье|n}}
 * Spanish: {{t|es|cuac|m}}
 * Swedish: {{t+|sv|kvack|n}}
+* Tagalog: {{t|tl|kwak-kwak}}
 * Turkish: {{t+|tr|vak}}
 * Welsh: {{t|cy|cwac}}
 {{trans-bottom}}
