t+zza:[[arye]] t+zza:[[destari]] ([[WT:EDIT|Assisted]]) <mill#37460201>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -157,6 +157,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 * Venetian: {{t|vec|molin|m}}, {{t|vec|mulin|m}}, {{t|vec|mułin|m}}
 * Vietnamese: {{t+|vi|cối xay}}
 * Welsh: {{t|cy|melin|f}}
+* Zazaki: {{t|zza|arye}}
 {{trans-bottom}}
 
 {{trans-top|building housing a grinding apparatus}}
@@ -248,6 +249,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 {{trans-mid}}
 * Hebrew: {{t+|he|טחנה|tr=tachánah}}
 * Norwegian: {{t-check|no|papirmølle|m}}
+* Zazaki: {{t|zza|destari}}
 {{trans-bottom}}
 
 {{checktrans-top}}
