/* English */ <in fits and starts#37463225>

--- a/en/i/in fits and starts.855551.wikitext
+++ b/en/i/in fits and starts.855551.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Adverb===
-{{head|en|adverb|head=in [[fits and starts]]}}
+===Prepositional phrase===
+{{en-PP|in [[fits and starts]]}}
 
 # [[intermittently]], [[jerkily]]
 
