/* English */ <in the reign of Queen Dick#37463233>

--- a/en/i/in the reign of Queen Dick.801800.wikitext
+++ b/en/i/in the reign of Queen Dick.801800.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Adverb===
-{{head|en|adverb|head=in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
+===Prepositional phrase===
+{{en-PP|in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
 
 # {{label|en|idiomatic|UK}} [[when pigs fly]]; [[never]]
