/* Derived terms */ +temps. <bleed#37472014>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -33,12 +33,15 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 #: ''Labialization '''bleeds''' palatalization.''
 
 ====Derived terms====
+{{der-top}}
 * [[bleed dry]]
-* [[bleeder]]
-* [[bleeding heart]]
 * [[bleed out]]
 * [[bleed to death]]
+{{der-mid}}
 * [[bleed white]]
+* [[bleeder]]
+* [[bleeding heart]]
+{{der-bottom}}
 
 ====Translations====
 {{trans-top|lose blood}}
