--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #*: “My Continental prominence is improving,” I commented dryly. ¶ Von Lindowe cut at a furze bush with his silver-mounted rattan. ¶ “Quite so,” he said as dryly, his hand '''at''' his mustache. “I may say if your intentions were known your life would not be worth a curse.”
 #* {{RQ:Schuster Hepaticae V|4}}
 #*: (''b'') sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
-# {{qualifier|indicating time}} [[simultaneous|Simultaneous]], [[during]].
+# {{qualifier|indicating time}} {{n-g|lang=en|Indicating occurrence in an instant of time or a period of time relatively short in context or from the speaker's perspective.}}
 #: {{ux|en|'''at''' six o’clock;&emsp; '''at''' closing time;&emsp; '''at''' night.}}
 #* {{quote-news|date=April 19, 2012|author=Josh Halliday|work=the Guardian
 |title=[http://www.guardian.co.uk/technology/2012/apr/19/free-speech-haven-lawless-cesspool Free speech haven or lawless cesspool – can the internet be civilised?]
