--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -28,7 +28,7 @@
 * French: {{t|fr|frison occidental|m}}
 * German: {{t+|de|Westfriesisch|n}}
 {{trans-mid}}
-* Italian: {{t-check|it|[[lingua]] [[frisone]] [[occidentale]]}} {{attention|it|2=was "lingua frisone occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}, {{qualifier|ad hoc}} {{t-check|it|[[lingua]] [[frisona]] [[occidentale]]}} {{attention|it|2=was "lingua frisona occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Italian: {{t|it|frisone occidentale|m}}
 * Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t|ja|フリース語|tr=Furīsu-go}}
 * Limburgish: {{t+|li|Wèsfriesj|n}}
 * Polish: (język) {{t|pl|zachodniofryzyjski|m}}
@@ -42,7 +42,7 @@
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
 * Finnish: {{t|fi|[[länsifriisiläinen]] [[murre]]}}
-* Italian: {{qualifier|ad hoc}} {{t-check|it|[[dialetto]] [[frisone]] [[occidentale]]}} {{attention|it|2=was "dialetto frisone occidentale" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Italian: {{t|it|frisone occidentale|m}}
 {{trans-mid}}
 * Polish: {{t|pl|zachodniofryzyjski|m}}
 * Russian: {{t|ru|западнофри́зский|m}} {{qualifier|язы́к}}
