--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -176,7 +176,7 @@ From {{etyl|enm|en}} {{m|enm|beden}}, from the {{etyl|ang|en}} verb {{m|ang|bēo
 *: Bokmål: {{t+|no|bud|n}}
 *: Nynorsk: {{t|nn|bud|n}}
 * Persian: {{t|fa|دو زن داری|sc=fa-Arab}}
-* Polish: {{t-needed|pl}}
+* Polish: {{t+|pl|oferta|f}}
 * Portuguese: {{t+|pt|licitação|f}}, {{t+|pt|lance|m}}
 * Romanian: {{t-needed|ro}}
 * Russian: {{t|ru|предлага́емая цена́|f}}, {{t+|ru|зая́вка|f}}, {{t+|ru|ста́вка|f}}
