--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -35,6 +35,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Portuguese: {{t+|pt|aposta|f}}
 * Russian: {{t+|ru|аза́ртная игра́|f}}, {{t+|ru|авантю́ра|f}}
 * Spanish: {{t+|es|apuesta}}
+* Turkish: {{t+|tr|kumar}}
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
