--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -31,6 +31,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Italian: {{t+|it|scommessa|f}}
 * Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * Macedonian: {{t|mk|коцка|f|tr=kócka}}, {{t|mk|комар|m|tr=kómar}}
+* Persian: {{t+|fa|قمار|tr=ghomâr|sc=fa-Arab}}
 * Polish: {{t+|pl|hazard|m}}
 * Portuguese: {{t+|pt|aposta|f}}
 * Russian: {{t+|ru|аза́ртная игра́|f}}, {{t+|ru|авантю́ра|f}}
