--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm|en}} {{m|enm|whistlen}}; {{etyl|ang|en}} {{m|ang|hwistlan}}, fro
 * Norwegian:
 *: Bokmål: {{t+|nb|fløyte|m|f}}
 *: Nynorsk: {{t|nn|fløyte|f}}
+*persian: {{t+|fa|سوت}}
 * Polish: {{t+|pl|gwizdek|m}}
 * Portuguese: {{t+|pt|apito|m}}
 * Romanian: {{t+|ro|fluier|n}}
