--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -105,6 +105,9 @@ From medieval {{etyl|la|en}} {{m|la|Bosphorus}}, from {{etyl|grc|en}} {{m|grc|Β
 * Western Panjabi: {{t|pnb|باسفورس}}
 {{trans-bottom}}
 
+[[Category:en:Exonyms]]
+[[Category:en:Turkey]]
+
 ----
 
 ==Latin==
