--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm|en}} {{m|enm|chin}}, from {{etyl|ang|en}} {{m|ang|cin}} or {{m|a
 * German: {{t+|de|Kinn|n}}
 *: Central Franconian: {{t|gmw-cfr|Kenn}}
 * Greek: {{t+|el|σαγόνι|n}}, {{t+|el|πηγούνι|n}}
+*: Ancient: {{t|grc|ἀνθερεών|m}}
 * Guaraní: {{t|gn|tañykãpy}}
 * Haitian Creole: {{t|ht|manton}}
 * Hausa: {{t|ha|haɓa|f|alt=haɓā̀}}
