--- a/en/d/DVD-RW.26218.wikitext
+++ b/en/d/DVD-RW.26218.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{a|RP}} {{IPA|/diː viː diː ɑː ˈdʌb(əl)juː/|lang=en}}
+
 ===Initialism===
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
