--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -240,10 +240,21 @@ From {{etyl|en|hu}} {{m|en|CD}}.
 
 ==Portuguese==
 
+===Alternative forms===
+* {{l|pt|cedê}} {{qualifier|uncommon}}
+
+===Etymology===
+From {{der|pt|en|CD}}.
+
+===Pronunciation===
+* {{a|Brazil}} {{IPA|/ˌse.ˈde/|lang=pt}}
+
 ===Noun===
 {{pt-noun|m|s}}
 
-# {{l|en|CD}} {{gloss|compact-disc}}
+# {{l|en|CD}} {{gloss|compact-disc: a type optical data storage disc}}
+
+{{catlangcode|pt|Computing}}
 
 ----
 
