/* English */ <a number of#37597601>

--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Determiner===
-{{en-det|head=[[a]] [[number]] [[of]]}}
+===Phrase===
+{{head|en|phrase}}
 
 # [[several|Several]].
 #: '''''A number of''' people have commented on it.''
