/* Usage notes */ <a number of#37597624>

--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -10,7 +10,7 @@
 #: ''I spoke with '''a number of''' them about it.''
 
 ====Usage notes====
-* This a leading example of the structure of a [[partitive]] construction. Other words that behave the same way as ''number'' does are ''dozen'', ''score'', ''hundred'', ''army'', ''mob'', ''lot'', ''[[plethora]]'', ''[[myriad]]''.
+* This a leading example of the structure of a [[partitive]] construction. Other words that behave the same way as ''number'' does are ''dozen'', ''[[quantity]]'', ''score'', ''hundred'', ''army'', ''[[lakh]]'', ''mob'', ''lot'', ''[[plethora]]'', ''[[myriad]]'', ''[[herd]]''.
 
 [[ru:a number of]]
 [[zh:a number of]]
