t+tl:[[tasugo]] ([[WT:EDIT|Assisted]]) <badger#37606096>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -123,6 +123,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Spanish: {{t+|es|tejón|m}}
 * Swahili: {{t|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
+* Tagalog: {{t|tl|tasugo}}
 * Taos: {{t|twf|kòlno’óna}}
 * Turkish: {{t+|tr|porsuk}}
 * Ukrainian: {{t+|uk|борсу́к|m|sc=Cyrl}}
