--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -1,12 +1,14 @@
 ==English==
-
+{{wikipedia|Limu (algae)}}
 ===Etymology===
 From {{etyl|haw|en}} {{m|haw|limu}}, from {{etyl|poz-pep-pro|en}} {{m|poz-pep-pro|*rimu}}, from {{etyl|poz-pnp-pro|en}} {{m|poz-pnp-pro|*rimu}}, from {{etyl|poz-pol-pro|en}} {{m|poz-pol-pro|*rimu}}, from {{etyl|poz-oce-pro|en}} {{m|poz-oce-pro|*limut}}, from {{etyl|pqe-pro|en}} {{m|pqe-pro|*limut}}, from {{etyl|poz-cet-pro|en}} {{m|poz-cet-pro|*limut}}, from {{etyl|poz-pro|en}} {{m|poz-pro|*limut}}.
 
 ===Noun===
 {{en-noun|~}}
-{{wikipedia}}
-# [[Hawaiian]] [[algae]], an important part of the ancient Hawaiian [[diet]]
+
+# {{lb|en|Hawaii}} Any of various kinds of edible [[algae]], which form an important part of the traditional Hawaiian [[diet]].
+#*'''2012''', {{w|Julia Flynn Siler}}, ''Lost Kingdom'', Grove Press, p. 158:
+#*:The menu included chicken, roast pig, raw fish, seaweed, which Hawaiians called '''''limu''''', roasted kukui nuts, and baked dog […].
 
 ----
 
