--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -78,6 +78,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Chinese:
 *: Cantonese: {{t|yue|兔仔|tr=tou3 zai2|sc=Hani}}, {{t|yue|白兔|tr=baak6 tou3|sc=Hani}} {{qualifier|white rabbit}}
 *: Mandarin: {{t+|cmn|兔子|tr=tùzi|sc=Hani}}, {{t+|cmn|白兔|tr=báitù|sc=Hani}} {{qualifier|white rabbit}}
+*: Min Nan: {{t+|nan|兔仔|tr=thò͘-á|sc=Hani}}
 * Classical Nahuatl: {{t|nci|tōchtli}}
 * Comanche: {{t|com|tabu}}
 * Cornish: {{t|kw|konin|m}}
