/* English */ Pronunciation <CD-RW#37702497>

--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Pronunciation===
+* {{a|RP}} {{IPA|/siː diː ɑː ˈdʌb(ə)ljuː/|lang=en}}
+* {{a|GenAm}} {{IPA|/siː diː ɑɹ ˈdʌbə(l)ju/|lang=en}}
+
 ===Alternative forms===
 * [[CD/RW]]
 
