--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -98,6 +98,11 @@
 #* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
 #*: She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.
 
+====Translations====
+{{trans-top|to bring to light by searching}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Etymology 2===
 {{etyl|it|en}} {{m|it|fioretto}}
 
