--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{etyl|en|nl}} {{compound|oh|my|lang=en|nocat=1}}.
+From {{etyl|en|nl}} {{m|en|oh my}}.
 
 ===Pronunciation===
 * {{audio|Nl-amai.ogg|Audio|lang=nl}}
