--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -73,10 +73,13 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 #*: '''Again''', it is of great consequence to avoid, etc.
 
 ====Derived terms====
+{{der-top}}
 * [[again and again]]
 * [[again-coming]]
-* [[once again]]
+{{der-mid}}
 * [[agenbite]]
+* [[once again]]
+{{der-bottom}}
 
 ====Translations====
 {{trans-top|back to a former place or state}}
