t+gl:[[roda do rato]] t-balance t+fr:[[molette de souris]] ([[WT:EDIT|Assisted]]) <mouse wheel#37758310>

--- a/en/m/mouse wheel.741247.wikitext
+++ b/en/m/mouse wheel.741247.wikitext
@@ -12,8 +12,10 @@
 ====Translations====
 {{trans-top|disc used for scrolling}}
 * Czech: {{t|cs|skrolovací kolečko|n}}
-{{trans-mid}}
 * Finnish: {{t|fi|hiiren rulla}}
+* French: {{t|fr|molette de souris|f}}
+{{trans-mid}}
+* Galician: {{t|gl|roda do rato|f}}
 * German: {{t|de|Mausrad|n}}, {{t|de|Scrollrad|n}}
 * Spanish: {{t|es|rueda del ratón}}
 {{trans-bottom}}
