--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -160,7 +160,7 @@ From {{etyl|la|fr}} {{m|la|sēdecim}}.
 {{cardinalbox|nrf|15|16|17|tchînze|dgiêx-sept}}
 
 ===Etymology===
-From {{etyl|fro|nrf}} {{m|fro|seize}}, from {{etyl|la|nrf}} {{m|la|sēdecim}}.
+From {{inh|nrf|fro|seize}}, from {{inh|nrf|la|sēdecim}}.
 
 ===Pronunciation===
 * {{audio|Jer-seize.ogg|Audio (Jersey)|lang=nrf}}
