/* English */ <merchant navy#37807557>

--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -5,6 +5,9 @@
 
 # [[civilian]] [[naval]] fleet dedicated to the sea transport of [[goods]] and [[merchandise]]
 
+====Synonyms====
+* [[merchant marine]]
+
 ====Translations====
 {{trans-top|civilian naval fleet}}
 * Dutch: {{t|nl|handelsvloot|f|m}}
