t+ka:[[კურდღელი]] ([[WT:EDIT|Assisted]]) <rabbit#37808332>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -96,7 +96,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Friulian: {{t|fur|cunin}}
 * Galician: {{t+|gl|coello|m}}
 * Gamilaraay: {{t|kld|bina gaarr}}
-* Georgian: {{t|ka|ბოცვერი|sc=Geor}}
+* Georgian: {{t|ka|ბოცვერი|sc=Geor}}, {{t|ka|კურდღელი|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}, {{t|de|Schlappohr|n}} {{qualifier|humorous}}
 * Greek: {{t+|el|κουνέλι|n}}
 *: Ancient: {{t|grc|κούνικλος|m}}
