--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -113,6 +113,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: German Low German: {{t|nds-de|Katteker|m}}
 {{trans-mid}}
 * Luxembourgish: {{t+|lb|Kaweechelchen|n}}
+* Lü: {{t|khb|ᦀᦲᦰᦣᦸᧅ|sc=Talu}}
 * Macedonian: {{t|mk|верверица|f}}
 * Malay:
 *: Rumi: {{t|ms|tupai}}, {{t|ms|bajing}}
