--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -20,6 +20,7 @@
 
 ====Translations====
 {{trans-top|alternative or hidden reason}}
+* Catalan: {{t|ca|segona intenció|f}}
 * Chinese:
 *: Mandarin: [[不可告人]][[的]][[動機]], [[不可告人]][[的]][[动机]] (bùkěgàorén de dòngjī), {{qualifier|to have an ulterior motive}} [[別有用心]], [[别有用心]] (biéyǒuyòngxīn), {{t|cmn|他心|tr=tāxīn|sc=Hani}}
 * Danish: {{t|da|bagtanke|c}}
@@ -28,8 +29,8 @@
 * French: [[motif]] [[secret]] {{g|m}}, {{t+|fr|arrière-pensée|f}}
 * German: {{t+|de|Hintergedanke|m}}
 * Hungarian: {{t|hu|hátsó szándék}}
-* Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 * Korean: {{t|ko|배후목적|tr=baehu mokjeog|sc=Kore}}
 * Norwegian: {{t+|no|baktanke|m}}
 * Portuguese: {{t|pt|segunda intenção|f}}
