t+no:[[plystre]] ([[WT:EDIT|Assisted]]) <whistle#37962379>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -260,6 +260,7 @@ From {{etyl|enm|en}} {{m|enm|whistlen}}; {{etyl|ang|en}} {{m|ang|hwistlan}}, fro
 * Korean: {{t|ko|[[휘파람]][[을]] [[불다]]|sc=Kore}}
 * Latvian: {{t+|lv|svilpt}}
 * Macedonian: {{t|mk|свири|impf|sc=Cyrl}}, {{t|mk|свирка|impf|sc=Cyrl}}
+* Norwegian: {{t|no|plystre}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
 * Polish: {{t+|pl|gwizdać|impf}}, {{t|pl|świstać|impf}}
 * Portuguese: {{t+|pt|assobiar}} {{qualifier|with one’s mouth}}, {{t+|pt|assoviar}} {{qualifier|with one’s mouth}}, {{t+|pt|apitar}} {{qualifier|with a whistle}}
