--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -25,7 +25,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{m|ang|þing||tr=thing}}, from {{ety
 # {{label|en|legal}}
 ## Whatever can be [[own]]ed.
 ## [[corporeal|Corporeal]] [[object]].
-# The [[latest]] [[fad]] or [[fashion]].
+# {{lb|en|somewhat|_|dated}} The [[latest]] [[fad]] or [[fashion]].
 #: {{ux|en|What do you mean you don't twerk, Stacy? It's the latest '''thing'''!}}
 # {{label|en|in the plural}} [[clothes|Clothes]], [[possessions]] or [[equipment]].
 #: {{ux|en|Hold on, let me just grab my '''things'''.}}
