--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -38,7 +38,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{m|ur|پایجامه|tr=pāyjāma}} / {{m|hi
 * Burmese: {{t-needed|my}}
 * Catalan: {{t+|ca|pijama|m}}
 * Chinese:
-*: Cantonese: {{t|yue|睡衣|tr=seoi6 ji1|sc=Hani}}
+*: Cantonese: {{t|yue|睡衣|tr=seoi6 ji1|sc=Hani}}, {{t-check|瞓覺衫|tr=fan3 gaau3saam1}}
 *: Hakka: {{t|hak|著睡衫|sc=Hani}}, {{t|hak|着睡衫|tr=chok-soi-sâm|sc=Hani}}, {{t|hak|睡目衫|tr=soi-muk-sâm|sc=Hani}}
 *: Mandarin: {{t+|cmn|睡衣|tr=shuìyī|sc=Hani}}
 *: Min Nan: {{t+|nan|睏衫|tr=khùn-saⁿ|sc=Hani}}
