--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -64,7 +64,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Georgian: {{t|ka|წავი}}
 * German: {{t+|de|Otter|m}}
 * Greek: {{t+|el|βίδρα|f}}
-* Hebrew: {{t+|he|לוטרות}}
+* Hebrew: {{t+|he|לוּטְרָה|f|tr=lútra}}
 * Hindi: {{t|hi|ऊदबिलाव|tr=ūd-bilāv|sc=Deva|m}}
 * Hungarian: {{t+|hu|vidra}}
 * Icelandic: {{t|is|otur|m}}
