--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{inh|en|ang|gamenian}} 'to play', either via a dialectal survival of {{inh|en|enm|gammlen}}, a variant of {{m|enm|gamenen}} 'to play, jest, be merry', or via a derivative of {{m|enm|gamel}} 'to play games'
+From {{inh|en|ang|gamenian}} ''to play'', either via a dialectal survival of {{inh|en|enm|gammlen}}, a variant of {{m|enm|gamenen}} ''to play, jest, be merry'', or via a derivative of {{m|enm|gamel}} ''to play games''.
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|/ˈɡæm.bəl/|lang=en}}
