Reverted edits by [[Special:Contributions/216.56.25.50|216.56.25.50]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <attend#37982080>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -15,7 +15,7 @@ From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|ang|en}}
 
 =====Related terms=====
 * {{l|en|tend}}
-* {{l|en|tinder}}hdgrunwdihandiywqyiegf
+* {{l|en|tinder}}
 
 ===Etymology 2===
 From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|fro|en}} {{m|fro|atendre||to attend, listen}}, from {{etyl|la|en}} {{m|la|attendere||to stretch toward, give heed to}}, from {{m|la|ad||to}} + {{m|la|tendere||to stretch}}; see [[tend]] and compare [[attempt]].
