t+eo:[[mueli]] ([[WT:EDIT|Assisted]]) <mill#37983191>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -330,6 +330,7 @@ From the noun {{term|#Noun|mill}}.
 * Chinese:
 *: Mandarin: {{t+|cmn|磨|tr=mó|sc=Hani}}, {{t+|cmn|粉碎|tr=fěnsuì|sc=Hani}}
 * Dutch: {{t+|nl|malen}}
+* Esperanto: {{t|eo|mueli}}
 * Finnish: {{t+|fi|jauhaa}}, {{t|fi|jyrsiä}}
 * French: {{t+|fr|moudre}}
 * German: {{t+|de|mahlen}}
