--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -4,7 +4,7 @@
 [[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
 
 ===Alternative forms===
-* {{l|en|iland}} {{qualifier|nonstandard}}
+* {{l|en|iland}} {{qualifier|obsolete}}
 * {{l|en|ylond}}, {{l|en|ylelond}}, {{l|en|yland}} {{qualifier|obsolete}}
 
 ===Etymology===
