--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -9,7 +9,7 @@
 * {{a|US}} {{IPA|/əˈɡɛn/|lang=en}}
 * {{audio|en-us-again.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-again.ogg|Audio (UK)|lang=en}}
-* {{rhymes|eɪn|lang=en}}
+* {{rhymes|eɪn|ɛn|lang=en}}
 * {{hyphenation|a|gain|lang=en}}
 
 ===Etymology===
