--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -51,7 +51,7 @@ From the prefix {{m|en|mini-}}.
 * {{l|rup|mine}}
 
 ===Etymology===
-From {{etyl|la|rup}} {{m|la|mē}}, possibly through a {{etyl|VL.|rup}} root ''mēne'', or through analogy with {{m|ro|tsini}}, from *''quene'', from {{m|la|quem}}. Compare Daco-Romanian {{m|ro|mine}}, also Dalmatian {{m|dlm|main}}.
+From {{inh|rup|la|mē}}, possibly through a {{inh|rup|VL.|}} root ''mēne'', or through analogy with {{m|ro|tsini}}, from *''quene'', from {{m|la|quem}}. Compare Daco-Romanian {{m|ro|mine}}, also Dalmatian {{m|dlm|main}}.
 
 ===Pronoun===
 {{head|rup|pronoun}}
