--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -40,7 +40,7 @@ From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|fro|en}}
 #*: '''Attends''' the emperor in his royal court.
 #* {{w|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}} (1800-1859)
 #*: With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.
-# {{senseid|en|to be present at}}{{label|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
+# {{senseid|en|to be present at}}{{label|en|transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings; to regularly go to (an event or place). {{defdate|from 17th c.}}
 #: {{ux|en|Children must '''attend''' primary school.}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
