/* Translations */ separate: probably has different words in other languages <attend#37997703>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -104,7 +104,6 @@ From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|fro|en}}
 * French: {{t+|fr|assister}}, {{t+|fr|présent|alt=être présent}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
-*: Ancient: {{t|grc|φοιτάω}} {{qualifier|school}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
 * Ido: {{t+|io|asistar}}
@@ -120,6 +119,11 @@ From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|fro|en}}
 * Spanish: {{t+|es|asistir}}
 * Swedish: {{t+|sv|närvara}}, {{t+|sv|delta}}
 * Welsh: {{t+|cy|mynychu}}
+{{trans-bottom}}
+
+{{trans-top|to regularly go to}}
+*Greek: Ancient: {{t|grc|φοιτάω}} {{qualifier|school}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ----
