--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -2,9 +2,9 @@
 [[File:Veasel.jpg|thumb|right|'''ermine''', ''Mustela erminea'']]
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|ermine}}, {{m|enm|ermin}}, {{m|enm|ermyn}}, from {{etyl|fro|en}} {{m|fro|ermin}}, {{m|fro|ermine}}, {{m|fro|hermine}}, from {{etyl|odt|-}} {{m|odt|*harmino}} ‘stoat skin’, from {{m|odt|*harmo}} ‘stoat, weasel’ (compare Dutch dialectal {{m|nl|herm}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*harmô}} (compare Old English {{m|ang|hearma}}, Old High German {{m|goh|harmo}} (adj. {{m|goh|harmin}}, obsolete German {{m|de|Harm}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ḱormō}} (compare Romansch {{m|rm|carmun}}, obsolete Lithuanian {{m|lt|šarmuõ}}).
+From {{etyl|enm|en}} {{m|enm|ermine}}, {{m|enm|ermin}}, {{m|enm|ermyn}}, from {{etyl|fro|en}} {{m|fro|ermin}}, {{m|fro|ermine}}, {{m|fro|hermine}}.
 
-Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{m|la|Armenius||Armenian mouse}} is without any foundation. <ref>{{R:Century 1911}}</ref>
+There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. Germanic origin is suggested via {{etyl|odt|-}} {{m|odt|*harmino}} ‘stoat skin’, from {{m|odt|*harmo}} ‘stoat, weasel’ (compare Dutch dialectal {{m|nl|herm}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*harmô}} (compare Old English {{m|ang|hearma}}, Old High German {{m|goh|harmo}} (adj. {{m|goh|harmin}}, obsolete German {{m|de|Harm}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ḱormō}} (compare Romansch {{m|rm|carmun}}, obsolete Lithuanian {{m|lt|šarmuõ}}). Romance sources identify the animal with the corresponding word for [[Armenian]], possibly from {{etyl|ML.|-}} {{m|la|mūs}} {{m|la|Armenius||Armenian mouse}} or a posterior compound.
 
 ===Pronunciation===
 * {{IPA|/ˈɜːmɪn/|lang=en}}
@@ -137,10 +137,6 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{m|la|Armenius|
 {{en-verb|ermin}}
 
 # To [[clothe]] with ermine
-
-===References===
-* OED 2nd edition 1989
-<references/>
 
 ===Anagrams===
 * [[emerin#English|emerin]]
