--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
 
+===Pronunciation===
+* {{rhymes|ɛndəʊ|lang=en}}
+
 ===Noun===
 {{en-noun}}
 
