--- a/en/i/inside job.854992.wikitext
+++ b/en/i/inside job.854992.wikitext
@@ -11,6 +11,7 @@
 {{trans-top}}
 * Arabic: {{t|ar|سوء استغلال الوظيفَة}}
 * Finnish: {{t|fi|sisäpiirin keikka}}
+* Chinese: [[幕]][[後]][[黑]][[手]]
 {{trans-mid}}
 * Polish: {{t|pl|robota wewnętrzna|f}}, {{t|pl|inside job|m}} {{qualifier|chiefly in conspiracy theories}}
 {{trans-bottom}}
