--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -300,6 +300,22 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 
 [[Category:en:Rabbits]]
 
+----
+
+==Hungarian==
+
+===Etymology===
+{{hu-suffix|rabbi|t|nocat=y}}
+
+===Pronunciation===
+* {{hu-IPA}}
+* {{hyphenation|rab|bit|lang=hu}}
+
+===Noun===
+{{head|hu|noun form}}
+
+# {{inflection of|rabbi||acc|s|lang=hu}}
+
 [[ar:rabbit]]
 [[roa-rup:rabbit]]
 [[ay:rabbit]]
