t+my:[[ဖမ်း]] t-balance ([[WT:EDIT|Assisted]]) <seize#38010098>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -54,6 +54,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Arabic: {{t|ar|إِسْتَوْلَى عَلَى}}
 * Armenian: {{t+|hy|գրավել}}
 * Bengali: {{t|bn|ধরা|sc=Beng}}
+* Burmese: {{t+|my|ဖမ်း|sc=Mymr}}
 * Catalan: {{t+|ca|apoderar-se}}
 * Chinese:
 *: Mandarin: {{t+|cmn|抓獲|sc=Hani}}, {{t|cmn|抓获|tr=zhuāhuò|sc=Hani}}, {{t+|cmn|攫取|tr=juéqǔ|sc=Hani}}, {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}
@@ -66,8 +67,8 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
 * Japanese: {{t|ja|捉える|tr=とらえる, toraeru}}, {{t+|ja|つかむ|tr=tsukamu}}
-* Korean: {{t+|ko|붙잡다|tr=butjapda}}
 {{trans-mid}}
+* Korean: {{t+|ko|붙잡다|tr=butjapda}}
 * Latin: {{t|la|capere}}, {{t|la|possideo}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}, {{t|zdj|siha|alt=usiha}}
 * North Frisian: {{t|frr|gripe}}
