--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -41,7 +41,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 {{trans-top|mammal}}
 * Afrikaans: {{t|af|ratel}}
 * Albanian: {{t+|sq|baldosë|f}}
-* Arabic: {{t|ar|غَرِير|m}}
+* Arabic: {{t|ar|غُرَيْر|m}}
 * Armenian: {{t+|hy|գորշուկ}}, {{t|hy|փորսուղ}}, {{t|hy|իշղար}}
 * Asturian: {{t|ast|texón|m}}, {{t|ast|melandru|m}}, {{t|ast|melón|m}}
 * Azeri: {{t+|az|porsuq}}
