--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -98,9 +98,7 @@
 ===Noun===
 {{pt-noun|m|s}}
 
-# [[Panchen Lama]]
-
-[[Category:pt:Buddhism]]
+# {{lb|pt|Tibetan Buddhism}} {{l|en|Panchen Lama}} {{gloss|second-highest ranking lama of the Gelug sect of Tibetan Buddhism}}
 
 ----
 
