t+cmn:[[即使這樣]] t+cmn:[[即使这样]] ([[WT:EDIT|Assisted]]) <even so#38039327>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -33,6 +33,8 @@
 ====Translations====
 {{trans-top|in spite of the preceding remark or facts}}
 * Catalan: {{t|ca|tot i així}}, {{t|ca|tot i això}}
+* Chinese:
+*: Mandarin: {{t|cmn|即使這樣|sc=Hani}}, {{t|cmn|即使这样|tr=jíshǐ zhèyàng|sc=Hani}}
 * Dutch: {{t+|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t+|nl|toch}}
 * Finnish: {{t|fi|siitä huolimatta}}
 * Hebrew: {{t|he|בְּכָל זֹאת|tr=bekhol zot|sc=Hebr}}
