--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -67,6 +67,8 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 =====Translations=====
 {{trans-top|police officer}}
 * Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
+* Chinese:
+*: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
 * Dutch: {{t+|nl|diender|m}}
 * Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
@@ -76,7 +78,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
 * Italian: {{t|it|piedipiatti}}, {{t+|it|poliziotto|m}}, {{t+|it|secondino|m}}, {{t+|it|sbirro|m}} {{qualifier|offensive}}
-* Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial, inoffensive}}
+* Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial, inoffensive}}, {{t+|ja|察|tr=satsu|sc=Jpan}}
 {{trans-mid}}
 * Macedonian: {{t|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t|mk|џандар|m|tr=džándar|sc=Cyrl}}
 * Norwegian: {{t+|no|purk|m}}
