t+hi:[[विज्ञापन]] ([[WT:EDIT|Assisted]]) <advertisement#38081527>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -75,7 +75,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Greek: {{t+|el|διαφήμιση|f}}
 * Gullah: {{t|gul|abbuhtizemu’t}}
 * Hebrew: {{t+|he|פִּרְסוֹמֶת|f|tr=pirsómet}}
-* Hindi: {{t|hi|इश्तहार|m|tr=iśtahār|sc=Deva}}
+* Hindi: {{t|hi|इश्तहार|m|tr=iśtahār|sc=Deva}}, {{t|hi|विज्ञापन|m|sc=Deva}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan}}, {{t+|id|reklame}}
