--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -121,6 +121,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 *: Lower Sorbian: {{t|dsb|wudra|f}}
 *: Upper Sorbian: {{t|hsb|wudra|f}}
 * Spanish: {{t+|es|nutria|f}}, {{t|es|lutria|f}}
+* Swahili: {{t+|sw|ota}}
 * Swedish: {{t+|sv|utter|c}}
 * Tagal Murut: {{t|mvv|tilung}}
 * Tagalog: {{t|tl|dungon}}
