t+ca:[[banda]] ([[WT:EDIT|Assisted]]) <bend#38165095>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -323,6 +323,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 {{trans-bottom}}
 
 {{trans-top|heraldic term}}
+* Catalan: {{t+|ca|banda|f}}
 * Czech: {{t|cs|břevno pokosem|m}}
 * Dutch: {{t|nl|schuinbalk|m}}
 * Finnish: {{t+|fi|palkki}}
