--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -5,6 +5,8 @@
 From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{m|ja|任天堂|tr=Nintendō||Luck of Heaven}}.
 
 ===Pronunciation===
+* {{a|RP}} {{IPA|/nɪnˈtɛndəʊ/|lang=en}}
+* {{a|GA}} {{IPA|/nɪnˈtɛndoʊ/|lang=en}}
 * {{rhymes|ɛndəʊ|lang=en}}
 
 ===Noun===
