t+ka:[[რეკლამა]] ([[WT:EDIT|Assisted]]) <advertisement#38165992>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -71,6 +71,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Finnish: {{t+|fi|mainos}}, {{t+|fi|mainostus}}
 * French: {{t+|fr|publicité|f}}, {{t+|fr|pub|f}}, {{t+|fr|annonce|f}}
 * Galician: {{t|gl|anuncio|m}}
+* Georgian: {{t|ka|რეკლამა|sc=Geor}}
 * German: {{t+|de|Anzeige|f}}, {{t+|de|Werbung|f}}, {{t+|de|Annonce|f}}, {{t|de|Reklameanzeige|f}}
 * Greek: {{t+|el|διαφήμιση|f}}
 * Gullah: {{t|gul|abbuhtizemu’t}}
