--- a/en/h/hi there.742282.wikitext
+++ b/en/h/hi there.742282.wikitext
@@ -3,6 +3,6 @@
 ===Interjection===
 {{en-interj}}
 
-# An informal and affectionate [[greeting]] used for an unfamiliar animal or toddler.
+# An informal [[greeting]].
 
 [[Category:en:Greetings]]
