--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -100,7 +100,7 @@ To ask for an object, use ''[[quan]]'' instead.
 ==Italian==
 
 ===Etymology===
-From {{inh|it|VL.||*eccu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
+From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
 
 ===Pronunciation===
 * {{IPA|/kwa/|lang=it}}
