--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -66,6 +66,7 @@ From {{etyl|enm|en}} *{{m|enm||quacken}}, {{m|enm|queken||to croak like a frog; 
 * German: {{t+|de|quaken}}
 * Hungarian: {{t+|hu|hápog}}
 * Icelandic: {{t|is|gagga}}, {{t|is|gussa}}
+* Ido: {{t+|io|kroasar}}
 * Interlingua: {{t|ia|quaccar}}
 {{trans-mid}}
 * Italian: {{t-check|it|[[fare]] [[qua qua]]}} <!-- was "[[fare]] [[qua qua]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
