--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -27,7 +27,7 @@ From {{etyl|enm|en}} *{{m|enm||quacken}}, {{m|enm|queken||to croak like a frog; 
 * Greek: {{t|el|πα πα}} (pa pa)
 * Hungarian: {{t|hu|háp}}, {{t|hu|hápogás}}
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
-* Ido: {{t+|io|kroaso}}
+* Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
 * Irish: {{t|ga|vrác|n}}
 * Italian: {{t|it|qua qua|m}}
 {{trans-mid}}
