--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -124,6 +124,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{m|dum|kwaksalver||
 * Greek: {{t+|el|κομπογιαννίτης|m}} (kompoyannítis), {{t+|el|αλμπάνης|m}} (albánis)
 * Hungarian: {{t+|hu|kuruzsló}}
 * Icelandic: {{t+|is|skottulæknir|m}}
+* Ido: {{t+|io|sharlatano}}
 * Indonesian: {{t+|id|dukun}}
 {{trans-mid}}
 * Indonesian: {{t+|id|dukun}}
