--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -150,6 +150,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{m|dum|kwaksalver||
 * Greek: {{t+|el|τσαρλατάνος|m}} (tsarlatános)
 * Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t|is|falsari|m}}, {{t|is|svikari|m}}
 {{trans-mid}}
+* Ido: {{t+|io|sharlatano}}
 * Italian: {{t+|it|ciarlatano|m}}, {{t|it|imbonitore|m}}, {{t|it|pataccaro|m}}
 * Japanese: {{t|ja|ペテン師|tr=peten-shi}}
 * Polish: {{t|pl|szarlatan|m-pr}}
