t+io:[[sharlatano]] ([[WT:EDIT|Assisted]]) <quack#38287952>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -161,6 +161,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{m|dum|kwaksalver||
 {{trans-bottom}}
 
 {{trans-top|doctor}}
+* Ido: {{t+|io|sharlatano}}
 * Italian: {{t|it|mediconzolo}}
 * Polish: {{t+|pl|medyk|m-pr}}
 {{trans-mid}}
