--- a/en/m/metalliferous.801832.wikitext
+++ b/en/m/metalliferous.801832.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 {{suffix|metal|ferous|alt2=iferous|lang=en}}
 
+===Pronunciation===
+* {{rhymes|ɪfəɹəs|lang=en}}
+
 ===Adjective===
 {{en-adj}}
 
