--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -17,7 +17,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 {{en-noun}}
 
 # Any [[aquatic]] or [[marine]] [[carnivorous]] [[mammal]], member of the family ''[[Mustelidae]]'', which also includes [[weasel]]s, [[polecat]]s, [[badger]]s, and others.
-# {{label|en|gay slang}} A [[hairy]] man with a [[slender]] [[physique]], in contrast with a [[bear]], who is more broadly set
+# {{label|en|gay slang}} A [[hairy]] man with a [[slender]] [[physique]], in contrast with a [[bear]], who is more [[thickset]].
 
 =====Derived terms=====
 {{rel-top|terms derived from otter (mammal)}}
