/* Noun */ fi translations <adjustment#38468928>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -29,7 +29,12 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 * {{l|en|adjuster}}
 
 ====Translations====
-{{trans-top|small change}}
+{{trans-top|action of adjusting}}
+* Finnish: {{t|fi|säätäminen}}, {{t|fi|säätö}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|result of adjusting, small change}}
 * Arabic: {{t+|ar|ضَبْط|m}}
 * Basque: {{t|eu|egokitze}}
 * Bulgarian: {{t+|bg|нагласяване|n}}, {{t+|bg|приспособяване|n}}, {{t+|bg|настройка|f}}
@@ -70,8 +75,19 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 * Welsh: {{t|cy|cyweiriad|m}}
 {{trans-bottom}}
 
-{{trans-top|(psychology) The behavioural process of balancing conflicting needs, or needs against obstacles in the environment}}
+{{trans-top|settling or balancing of a financial account}}
+* Finnish: {{t|fi|korjaus}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|process of balancing conflicting needs}}
+* Finnish: {{t|fi|sopeutuminen}}
+{{trans-mid}}
 * Russian: {{t+|ru|адапта́ция|f}}
+{{trans-bottom}}
+
+{{trans-top|assessment or settlement by an insurance company}}
+* Finnish: {{t|fi|arviointi}} {{qualifier|assessment}}; {{t|fi|korvaus}}, {{t|fi|korvaaminen}} {{qualifier|settlement}}
 {{trans-mid}}
 {{trans-bottom}}
 
