--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -4,7 +4,7 @@
 [[File:A aesthetic Bamboo poles.JPG|thumb]]
 
 ===Etymology===
-From {{etyl|nl|en}} {{m|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{etyl|ms|en}} {{m|ms|bambu}}, from {{etyl|kn|en}} {{m|kn|ಬಂಬು}}.
+{{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{etyl|ms|en}} {{m|ms|bambu}}, from {{etyl|kn|en}} {{m|kn|ಬಂಬು}}.
 
 ===Pronunciation===
 * {{IPA|/bæmˈbu/|lang=en}}
