--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -17,7 +17,7 @@ From {{m|en|bend}}.
 ====Adjective====
 {{en-adj|er|more}}
 
-# (of something that is usually straight) folded, dented
+# {{label|en|Of something that is usually straight}} folded, dented
 # {{label|en|derogatory|colloquial|chiefly|UK}} [[homosexual|Homosexual]].
 # [[determined|Determined]] or [[insistent]].
 #: ''He was '''bent''' on going to Texas, but not even he could say why.''
